--- a/index.html
+++ b/index.html
@@ -88,8 +88,18 @@
       /* Картинки на стартовом экране */
       #startScreenLeftImageContainer,
       #startScreenRightImageContainer{
-        width:150px !important;
-        height:150px !important;
+        width:250px !important;
+        height:250px !important;
+        left:auto !important;
+        right:auto !important;
+      }
+
+      #startScreenLeftImageContainer{
+        left:-100px !important;
+      }
+
+      #startScreenRightImageContainer{
+        right:-100px !important;
       }
 
       /* Картинки на экране результатов */
@@ -190,11 +200,21 @@
         font-size:14px;
       }
 
-      /* Картинки на стартовом экране - еще меньше */
+      /* Картинки на стартовом экране */
       #startScreenLeftImageContainer,
       #startScreenRightImageContainer{
-        width:100px !important;
-        height:100px !important;
+        width:200px !important;
+        height:200px !important;
+        left:auto !important;
+        right:auto !important;
+      }
+
+      #startScreenLeftImageContainer{
+        left:-80px !important;
+      }
+
+      #startScreenRightImageContainer{
+        right:-80px !important;
       }
 
       /* Картинки на экране результатов */
